--- a/01_BasicOperations.ipynb
+++ b/01_BasicOperations.ipynb
@@ -21,6 +21,8 @@
    ],
    "source": [
     "import tensorflow as tf\n",
+    "#The notion of tensorflow is first constructing a graph (numbers & operations),\n",
+    "#then later we feed the data (using feed_dict) when running the constructed graph (using sess.run).\n",
     "a = tf.constant(2)\n",
     "b = tf.constant(3)\n",
     "add = tf.add(a, b)\n",
@@ -34,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a: Tensor(\"Placeholder_14:0\", dtype=int16)\n",
+      "a: Tensor(\"Placeholder:0\", dtype=int16)\n",
       "Addition with variables: 5\n",
       "Multiply with variables: 6\n"
      ]
@@ -60,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A: Tensor(\"Const_33:0\", shape=(1, 2), dtype=float32)\n",
+      "A: Tensor(\"Const_2:0\", shape=(1, 2), dtype=float32)\n",
       "A: [[3. 3.]]\n",
       "[[12.]]\n"
      ]
