--- a/03_LogisticRegression.ipynb
+++ b/03_LogisticRegression.ipynb
@@ -18,10 +18,18 @@
     }
    ],
    "source": [
+    "import os\n",
     "import tensorflow as tf\n",
+    "#download mnist data to /tmp/data/\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "mnist = input_data.read_data_sets(\"/tmp/data/\", one_hot=True)\n",
-    "print(\"Total size of {} training data\".format(int(mnist.train.num_examples)))"
+    "print(\"Total size of {} training data\".format(int(mnist.train.num_examples)))\n",
+    "\n",
+    "tb_logdir = \"/tmp/tf_tutorial/03_LogisticRegression\"\n",
+    "\n",
+    "#Data parameters\n",
+    "image_size = 28*28\n",
+    "n_class = 10"
    ]
   },
   {
@@ -30,14 +38,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Data parameters\n",
-    "image_size = 28*28\n",
-    "n_class = 10\n",
     "#Training parameters\n",
     "learning_rate = 1e-2\n",
     "total_epochs = 30\n",
     "batch_size = 100\n",
     "\n",
+    "#names are for tensorboard.\n",
     "x = tf.placeholder(tf.float32, [None, image_size], name='InputImage')\n",
     "y = tf.placeholder(tf.float32, [None, n_class], name='Label')\n",
     "W = tf.Variable(tf.zeros([image_size, n_class]), name='Weight')\n",
@@ -61,35 +67,35 @@
     "    accuracy = tf.reduce_mean(tf.cast(correct, tf.float32))\n",
     "    \n",
     "init = tf.global_variables_initializer()\n",
+    "#Adding image summary for input image, which requires a 4D shape.\n",
+    "input_image = tf.reshape(x, [-1, 28, 28, 1])\n",
+    "tf.summary.image(\"input_image\", input_image)\n",
     "tf.summary.scalar(\"loss_summary\", loss)\n",
     "merged_summary_op = tf.summary.merge_all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 00  Average loss: 0.15486\n",
+      "Epoch 00  Average loss: 0.15464\n",
       "Epoch 05  Average loss: 0.01177\n",
       "Epoch 10  Average loss: 0.00657\n",
       "Epoch 15  Average loss: 0.00463\n",
       "Epoch 20  Average loss: 0.00360\n",
-      "Epoch 25  Average loss: 0.00296\n",
-      "Training Complete!\n",
-      "Final Training loss: 0.00256   acc:68.15%\n",
-      "Testing loss:        0.00329   acc:68.27%\n"
+      "Epoch 25  Average loss: 0.00296\n"
      ]
     }
    ],
    "source": [
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
-    "    train_writer = tf.summary.FileWriter(\"/tmp/tf_tutorial/03_LogisticRegression\", graph=tf.get_default_graph())\n",
+    "    train_writer = tf.summary.FileWriter(tb_logdir, graph=tf.get_default_graph())\n",
     "    for epoch in range(total_epochs):\n",
     "        sum_loss = 0\n",
     "        total_batch = int(mnist.train.num_examples/batch_size)\n",
@@ -105,15 +111,14 @@
     "    train_loss, train_acc = sess.run([loss, accuracy], feed_dict={x:mnist.train.images, y:mnist.train.labels})\n",
     "    print(\"Final Training loss: {:.5f}   acc:{:.2f}%\".format(train_loss, train_acc*100))\n",
     "    test_loss, test_acc = sess.run([loss, accuracy], feed_dict={x:mnist.test.images[:3000], y:mnist.test.labels[:3000]})\n",
-    "    print(\"Testing loss:        {:.5f}   acc:{:.2f}%\".format(test_loss, test_acc*100))\n"
+    "    print(\"Testing loss:        {:.5f}   acc:{:.2f}%\".format(test_loss, test_acc*100))\n",
+    "    \n",
+    "#You can also open tensoboard through terminal beforehand to make sure correctness.\n",
+    "#(e.g. whetherthe loss is reducing, correct input image...)\n",
+    "print(\"Starting tensorboard...\")\n",
+    "print(\"Open http://0.0.0.0:6006/ for viewing.\")\n",
+    "os.system(\"tensorboard --logdir={}\".format(tb_logdir))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
