--- a/03_LogisticRegression.ipynb
+++ b/03_LogisticRegression.ipynb
@@ -88,7 +88,12 @@
       "Epoch 10  Average loss: 0.00657\n",
       "Epoch 15  Average loss: 0.00463\n",
       "Epoch 20  Average loss: 0.00360\n",
-      "Epoch 25  Average loss: 0.00296\n"
+      "Epoch 25  Average loss: 0.00296\n",
+      "Training Complete!\n",
+      "Final Training loss: 0.00256   acc:68.09%\n",
+      "Testing loss:        0.00329   acc:68.10%\n",
+      "Starting tensorboard...\n",
+      "Open http://0.0.0.0:6006/ for viewing.\n"
      ]
     }
    ],
