--- a/04_KmeanClustering.ipynb
+++ b/04_KmeanClustering.ipynb
@@ -49,11 +49,15 @@
     "\n",
     "X = tf.placeholder(tf.float32, shape=[None, image_size], name='InputImage')\n",
     "Y = tf.placeholder(tf.float32, shape=[None, n_class], name=\"Label\")\n",
-    "with tf.name_scope(\"Kmeans\"):\n",
-    "    kmeans = KMeans(inputs=X, num_clusters=n_cluster, distance_metric='squared_euclidean', use_mini_batch=True)\n",
-    "    all_scores, cluster_idx, scores, cluster_centers_initialized, init_op, train_op = kmeans.training_graph()\n",
-    "    cluster_idx = cluster_idx[0]\n",
-    "    avg_distance = tf.reduce_mean(scores)\n",
+    "kmeans = KMeans(inputs=X, num_clusters=n_cluster, distance_metric='squared_euclidean', use_mini_batch=True)\n",
+    "#all_scores: A matrix (or list of matrices) of dimensions (num_input, num_clusters) where the value is the distance of an input vector and a cluster center. \n",
+    "#cluster_idx: A vector (or list of vectors). Each element in the vector corresponds to an input row in 'inp' and specifies the cluster id corresponding to the input. \n",
+    "#scores: Similar to cluster_idx but specifies the distance to the assigned cluster instead. \n",
+    "#cluster_centers_initialized: scalar indicating whether clusters have been initialized. \n",
+    "#init_op: an op to initialize the clusters. \n",
+    "#training_op: an op that runs an iteration of training.\n",
+    "all_scores, cluster_idx, scores, cluster_centers_initialized, init_op, train_op = kmeans.training_graph()\n",
+    "cluster_idx = cluster_idx[0]\n",
     "\n",
     "init = tf.global_variables_initializer()"
    ]
@@ -74,35 +78,29 @@
    "source": [
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
+    "    #init kmeans graph\n",
     "    sess.run(init_op, feed_dict={X:data_X})\n",
-    "    \n",
     "    for i in range(total_epochs):\n",
-    "        _, dis, idx = sess.run([train_op, avg_distance, cluster_idx], feed_dict={X: data_X})\n",
-    "    \n",
+    "        _, idx = sess.run([train_op, cluster_idx], feed_dict={X: data_X})\n",
+    "    #idx: shape(55000,) where its values correspond to the belonging cluster of index.\n",
     "    counts = np.zeros(shape=(n_cluster, n_class))\n",
     "    for i in range(len(idx)):\n",
     "        counts[idx[i]] += mnist.train.labels[i]\n",
+    "        \n",
+    "    #assign the label with the largest possibility of appearance for every cluster.\n",
     "    labels_map = [np.argmax(c) for c in counts]\n",
     "    labels_map = tf.convert_to_tensor(labels_map)\n",
     "\n",
-    "    # Evaluation ops\n",
-    "    # Lookup: centroid_id -> label\n",
+    "    #lookup labels for each cluster using labels_map\n",
     "    cluster_label = tf.nn.embedding_lookup(labels_map, cluster_idx)\n",
-    "    # Compute accuracy\n",
+    "    #compute accuracy\n",
     "    correct_prediction = tf.equal(cluster_label, tf.cast(tf.argmax(Y, 1), tf.int32))\n",
     "    accuracy_op = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
     "\n",
-    "    # Test Model\n",
+    "    #Test Model\n",
     "    test_x, test_y = mnist.test.images, mnist.test.labels\n",
     "    print(\"Test Accuracy:\", sess.run(accuracy_op, feed_dict={X: test_x, Y: test_y}))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
