--- a/05_DenseNeuralNetwork.ipynb
+++ b/05_DenseNeuralNetwork.ipynb
@@ -17,9 +17,16 @@
     }
    ],
    "source": [
+    "import os\n",
     "import tensorflow as tf\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
-    "mnist = input_data.read_data_sets(\"/tmp/data/\", one_hot=True)"
+    "mnist = input_data.read_data_sets(\"/tmp/data/\", one_hot=True)\n",
+    "\n",
+    "tb_logdir = \"/tmp/tf_tutorial/05_DenseNeuralNetwork\"\n",
+    "\n",
+    "#Data parameters\n",
+    "image_size = 28*28\n",
+    "n_class = 10"
    ]
   },
   {
@@ -28,10 +35,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Data parameters\n",
-    "image_size = 28*28\n",
-    "n_class = 10\n",
-    "\n",
     "#Trainin parameters\n",
     "learning_rate = 0.1\n",
     "total_steps = 1000\n",
@@ -47,17 +50,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "def neural_net(self, shape, scope):\n",
+    "#Two ways of having a dense layer.\n",
+    "def neural_net_raw(self, shape, scope):\n",
     "    with tf.name_scope(scope):\n",
     "        W = tf.Variable(tf.random_normal(shape, dtype=tf.float32), name='weight')\n",
     "        b = tf.Variable(tf.random_normal([shape[1]]), name='bias')\n",
     "        self = tf.add(tf.matmul(self, W), b)\n",
     "    return self\n",
-    "'''\n",
-    "def neural_net(self, nodes, scope):\n",
-    "    with tf.name_scope(scope):\n",
-    "        self = tf.layers.dense(self, nodes)\n",
+    "\n",
+    "def neural_net(self, units, scope):\n",
+    "    self = tf.layers.dense(self, units=units, name=scope)\n",
     "    return self"
    ]
   },
@@ -68,9 +70,9 @@
    "outputs": [],
    "source": [
     "with tf.name_scope('Model'):\n",
-    "    dense_net = neural_net(X, 128,'layer_1')\n",
-    "    dense_net = neural_net(dense_net, 256,'layer_2')\n",
-    "    dense_net = neural_net(dense_net, n_class,'layer_3')"
+    "    dense_net = neural_net_raw(X, (image_size, 128), 'layer_1')\n",
+    "    dense_net = neural_net(dense_net, 256, 'layer_2')\n",
+    "    dense_net = neural_net(dense_net, n_class, 'layer_3')"
    ]
   },
   {
@@ -89,6 +91,8 @@
     "    accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))\n",
     "    \n",
     "init = tf.global_variables_initializer()\n",
+    "input_image = tf.reshape(X, [-1, 28, 28, 1])\n",
+    "tf.summary.image(\"input_image\", input_image)\n",
     "tf.summary.scalar('loss', loss_op)\n",
     "tf.summary.scalar('accuracy', accuracy)\n",
     "merge_summary_op = tf.summary.merge_all()"
@@ -96,33 +100,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 0  accuracy:6.00%\n",
-      "step: 100  accuracy:86.00%\n",
-      "step: 200  accuracy:83.00%\n",
-      "step: 300  accuracy:78.00%\n",
-      "step: 400  accuracy:88.00%\n",
-      "step: 500  accuracy:90.00%\n",
-      "step: 600  accuracy:89.00%\n",
-      "step: 700  accuracy:87.00%\n",
-      "step: 800  accuracy:88.00%\n",
-      "step: 900  accuracy:93.00%\n",
+      "step: 0  accuracy:10.00%\n",
+      "step: 100  accuracy:71.00%\n",
+      "step: 200  accuracy:86.00%\n",
+      "step: 300  accuracy:88.00%\n",
+      "step: 400  accuracy:81.00%\n",
+      "step: 500  accuracy:83.00%\n",
+      "step: 600  accuracy:84.00%\n",
+      "step: 700  accuracy:78.00%\n",
+      "step: 800  accuracy:77.00%\n",
+      "step: 900  accuracy:76.00%\n",
       "Training Complete!\n",
-      "Final Training acc:87.97%\n",
-      "Testing acc       :84.40%\n"
+      "Final Training acc:80.58%\n",
+      "Testing acc       :76.60%\n"
      ]
     }
    ],
    "source": [
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
-    "    train_writer = tf.summary.FileWriter(\"/tmp/tf_tutorial/05_DenseNeuralNetwork\", graph=tf.get_default_graph())\n",
+    "    train_writer = tf.summary.FileWriter(tb_logdir, graph=tf.get_default_graph())\n",
     "    for step in range(total_steps):\n",
     "        batch_x, batch_y = mnist.train.next_batch(batch_size)\n",
     "        summary, acc, _ = sess.run([merge_summary_op, accuracy, train_op], feed_dict={X:batch_x, Y:batch_y})\n",
@@ -135,13 +139,6 @@
     "    test_acc = sess.run(accuracy, feed_dict={X:mnist.test.images[:3000], Y:mnist.test.labels[:3000]})\n",
     "    print(\"Testing acc       :{:.2f}%\".format(test_acc*100))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
