--- a/05_DenseNeuralNetwork.ipynb
+++ b/05_DenseNeuralNetwork.ipynb
@@ -58,8 +58,8 @@
     "        self = tf.add(tf.matmul(self, W), b)\n",
     "    return self\n",
     "\n",
-    "def neural_net(self, units, scope):\n",
-    "    self = tf.layers.dense(self, units=units, name=scope)\n",
+    "def neural_net(self, units, name):\n",
+    "    self = tf.layers.dense(self, units=units, name=name)\n",
     "    return self"
    ]
   },
@@ -70,9 +70,9 @@
    "outputs": [],
    "source": [
     "with tf.name_scope('Model'):\n",
-    "    dense_net = neural_net_raw(X, (image_size, 128), 'layer_1')\n",
-    "    dense_net = neural_net(dense_net, 256, 'layer_2')\n",
-    "    dense_net = neural_net(dense_net, n_class, 'layer_3')"
+    "    dense_net = neural_net_raw(X, (image_size, 128), 'dense_layer1')\n",
+    "    dense_net = neural_net(dense_net, 256, 'dense_layer2')\n",
+    "    dense_net = neural_net(dense_net, n_class, 'dense_layer3')"
    ]
   },
   {
@@ -107,19 +107,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 0  accuracy:10.00%\n",
-      "step: 100  accuracy:71.00%\n",
-      "step: 200  accuracy:86.00%\n",
-      "step: 300  accuracy:88.00%\n",
-      "step: 400  accuracy:81.00%\n",
-      "step: 500  accuracy:83.00%\n",
-      "step: 600  accuracy:84.00%\n",
-      "step: 700  accuracy:78.00%\n",
-      "step: 800  accuracy:77.00%\n",
-      "step: 900  accuracy:76.00%\n",
+      "step: 0  accuracy:17.00%\n",
+      "step: 100  accuracy:80.00%\n",
+      "step: 200  accuracy:81.00%\n",
+      "step: 300  accuracy:82.00%\n",
+      "step: 400  accuracy:79.00%\n",
+      "step: 500  accuracy:77.00%\n",
+      "step: 600  accuracy:78.00%\n",
+      "step: 700  accuracy:76.00%\n",
+      "step: 800  accuracy:76.00%\n",
+      "step: 900  accuracy:82.00%\n",
       "Training Complete!\n",
-      "Final Training acc:80.58%\n",
-      "Testing acc       :76.60%\n"
+      "Final Training acc:64.66%\n",
+      "Testing acc       :63.80%\n"
      ]
     }
    ],
