--- a/05_DenseNeuralNetwork.ipynb
+++ b/05_DenseNeuralNetwork.ipynb
@@ -38,7 +38,8 @@
     "#Trainin parameters\n",
     "learning_rate = 0.1\n",
     "total_steps = 1000\n",
-    "batch_size = 100\n",
+    "batch_size = 128\n",
+    "dense_units = [128, 256]\n",
     "\n",
     "X = tf.placeholder(tf.float32, shape=[None, image_size], name='InputImage')\n",
     "Y = tf.placeholder(tf.float32, shape=[None, n_class], name='Label')"
@@ -51,14 +52,14 @@
    "outputs": [],
    "source": [
     "#Two ways of having a dense layer.\n",
-    "def neural_net_raw(self, shape, scope):\n",
+    "def neural_net(self, shape, scope):\n",
     "    with tf.name_scope(scope):\n",
     "        W = tf.Variable(tf.random_normal(shape, dtype=tf.float32), name='weight')\n",
     "        b = tf.Variable(tf.random_normal([shape[1]]), name='bias')\n",
     "        self = tf.add(tf.matmul(self, W), b)\n",
     "    return self\n",
     "\n",
-    "def neural_net(self, units, name):\n",
+    "def neural_net_ez(self, units, name):\n",
     "    self = tf.layers.dense(self, units=units, name=name)\n",
     "    return self"
    ]
@@ -70,9 +71,9 @@
    "outputs": [],
    "source": [
     "with tf.name_scope('Model'):\n",
-    "    dense_net = neural_net_raw(X, (image_size, 128), 'dense_layer1')\n",
-    "    dense_net = neural_net(dense_net, 256, 'dense_layer2')\n",
-    "    dense_net = neural_net(dense_net, n_class, 'dense_layer3')"
+    "    dense_net = neural_net(X, (image_size, dense_units[0]), 'dense_layer1')\n",
+    "    dense_net = neural_net(dense_net, (dense_units[0], dense_units[1]), 'dense_layer2')\n",
+    "    dense_net = neural_net(dense_net, (dense_units[1], n_class), 'dense_layer3')"
    ]
   },
   {
@@ -107,19 +108,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 0  accuracy:17.00%\n",
-      "step: 100  accuracy:80.00%\n",
-      "step: 200  accuracy:81.00%\n",
-      "step: 300  accuracy:82.00%\n",
-      "step: 400  accuracy:79.00%\n",
-      "step: 500  accuracy:77.00%\n",
-      "step: 600  accuracy:78.00%\n",
-      "step: 700  accuracy:76.00%\n",
-      "step: 800  accuracy:76.00%\n",
-      "step: 900  accuracy:82.00%\n",
+      "step: 0  accuracy:10.16%\n",
+      "step: 100  accuracy:82.03%\n",
+      "step: 200  accuracy:81.25%\n",
+      "step: 300  accuracy:85.94%\n",
+      "step: 400  accuracy:75.78%\n",
+      "step: 500  accuracy:80.47%\n",
+      "step: 600  accuracy:86.72%\n",
+      "step: 700  accuracy:82.81%\n",
+      "step: 800  accuracy:90.62%\n",
+      "step: 900  accuracy:84.38%\n",
       "Training Complete!\n",
-      "Final Training acc:64.66%\n",
-      "Testing acc       :63.80%\n"
+      "Final Training acc:85.48%\n",
+      "Testing acc       :83.10%\n"
      ]
     }
    ],
