--- a/06_ConvNeuralNetwork.ipynb
+++ b/06_ConvNeuralNetwork.ipynb
@@ -37,8 +37,10 @@
    "source": [
     "#Train parameters\n",
     "learning_rate = 0.1\n",
-    "total_steps = 500\n",
-    "batch_size = 100\n",
+    "total_steps = 200\n",
+    "batch_size = 64\n",
+    "conv_filters = [64, 32]\n",
+    "dense_units = [128]\n",
     "\n",
     "X = tf.placeholder(tf.float32, [None, image_size], name='InputImage')\n",
     "Y = tf.placeholder(tf.float32, [None, n_class], name='Label')"
@@ -50,41 +52,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_conv_layer(self, n_filter, k, name):\n",
-    "    self = tf.layers.conv2d(self, filters=n_filter, kernel_size=k)\n",
+    "def conv_layer(self, output_ch, filter_size, stride, scope):\n",
+    "    with tf.name_scope(scope):\n",
+    "        input_ch = int(self.shape[-1])\n",
+    "        filters = tf.Variable(tf.random_normal([filter_size, filter_size, input_ch, output_ch]), name='filters')\n",
+    "        self = tf.nn.conv2d(self, filters, strides=[1, stride, stride, 1], padding='SAME')\n",
+    "        b = tf.Variable(tf.random_normal([output_ch]), name='bias')\n",
+    "        self = tf.nn.bias_add(self, b)\n",
     "    return self\n",
     "\n",
-    "def add_max_pool_layer(self, p, name):\n",
-    "    self = tf.layers.max_pooling2d(self, pool_size=p, strides=1, name=name)\n",
+    "def maxpool_layer(self, ksize, stride, scope):\n",
+    "    with tf.name_scope(scope):\n",
+    "        self = tf.nn.max_pool(self, [1, ksize, ksize, 1], [1, stride, stride, 1], padding='SAME')\n",
     "    return self\n",
     "\n",
-    "def add_dense_layer(self, units, name):\n",
-    "    self = tf.layers.dense(self, units=units)\n",
+    "def dense_layer(self, next_units, scope):\n",
+    "    with tf.name_scope(scope):\n",
+    "        now_units = int(self.shape[1])\n",
+    "        W = tf.Variable(tf.random_normal([now_units, next_units], dtype=tf.float32), name='weight')\n",
+    "        b = tf.Variable(tf.random_normal([next_units]), name='bias')\n",
+    "        self = tf.add(tf.matmul(self, W), b)\n",
     "    return self\n",
     "    \n",
     "def build_cnn(input_layer):\n",
     "    with tf.name_scope('CNN'):\n",
-    "        net = add_conv_layer(input_layer, 64, (3,3),'Conv_1')\n",
-    "        net = add_max_pool_layer(net, 3, 'Max_1')\n",
-    "        net = add_conv_layer(net, 32, (3,3),'Conv_2')\n",
-    "        net = add_max_pool_layer(net, 3, 'Max_2')\n",
+    "        net = conv_layer(input_layer, conv_filters[0], 3, 1, 'Conv_layer1')\n",
+    "        net = maxpool_layer(net, 3, 3, 'Max_layer1')\n",
+    "        net = conv_layer(net, conv_filters[1], 3, 1, 'Conv_layer2')\n",
+    "        net = maxpool_layer(net, 3, 3, 'Max_layer2')\n",
     "    return net\n",
     "\n",
     "def flatten_layer(input_net):\n",
-    "    net = tf.contrib.layers.flatten(input_net)\n",
-    "    #---raw version:\n",
-    "    '''\n",
     "    with tf.name_scope('Flatten'):\n",
     "        product = np.prod(np.asarray(input_net.shape.as_list()[1:]))\n",
     "        net = tf.reshape(input_net, [-1, product])\n",
-    "    '''\n",
     "    return net\n",
-    "        \n",
     "        \n",
     "def build_dnn(input_net):\n",
     "    with tf.name_scope('DNN'):\n",
-    "        net = add_dense_layer(input_net, 32, 'Dense_1')\n",
-    "        net = add_dense_layer(net, n_class, 'Dense_2')\n",
+    "        net = dense_layer(input_net, dense_units[0], 'Dense_layer1')\n",
+    "        net = dense_layer(net, n_class, 'Dense_layer2')\n",
     "    return net"
    ]
   },
@@ -114,13 +121,13 @@
     "    train_op = optimizer.minimize(loss_op)\n",
     "with tf.name_scope('Accuracy'):\n",
     "    correct_pred =  tf.equal(tf.argmax(fcnn, 1), tf.argmax(Y, 1))\n",
-    "    accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))\n",
+    "    accuracy_op = tf.reduce_mean(tf.cast(correct_pred, tf.float32))\n",
     "\n",
     "init = tf.global_variables_initializer()\n",
     "input_image = tf.reshape(X, [-1, 28, 28, 1])\n",
     "tf.summary.image(\"input_image\", input_image)\n",
     "tf.summary.scalar('loss', loss_op)\n",
-    "tf.summary.scalar('accuracy', accuracy)\n",
+    "tf.summary.scalar('accuracy', accuracy_op)\n",
     "merge_summary_op = tf.summary.merge_all()"
    ]
   },
@@ -133,11 +140,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 0  accuracy:12.00%\n",
-      "step: 100  accuracy:81.00%\n",
-      "step: 200  accuracy:94.00%\n",
-      "step: 300  accuracy:93.00%\n",
-      "step: 400  accuracy:97.00%\n",
+      "step: 0  train_acc:9.38%  test accuracy:9.57%\n",
+      "step: 20  train_acc:31.25%  test accuracy:32.67%\n",
+      "step: 40  train_acc:76.56%  test accuracy:71.43%\n",
+      "step: 60  train_acc:81.25%  test accuracy:82.23%\n",
+      "step: 80  train_acc:82.81%  test accuracy:83.03%\n",
+      "step: 100  train_acc:87.50%  test accuracy:88.67%\n",
+      "step: 120  train_acc:90.62%  test accuracy:88.50%\n",
+      "step: 140  train_acc:89.06%  test accuracy:88.63%\n",
+      "step: 160  train_acc:85.94%  test accuracy:90.40%\n",
+      "step: 180  train_acc:95.31%  test accuracy:91.60%\n",
       "Training Complete!\n"
      ]
     }
@@ -149,12 +161,12 @@
     "    test_writer = tf.summary.FileWriter(tb_logdir + '/test')\n",
     "    for step in range(total_steps):\n",
     "        batch_x, batch_y = mnist.train.next_batch(batch_size)\n",
-    "        summary, acc, _ = sess.run([merge_summary_op, accuracy, train_op], feed_dict={X:batch_x, Y:batch_y})\n",
+    "        summary, train_acc, _ = sess.run([merge_summary_op, accuracy_op, train_op], feed_dict={X:batch_x, Y:batch_y})\n",
     "        train_writer.add_summary(summary, step)\n",
-    "        summary = sess.run(merge_summary_op, feed_dict={X:mnist.test.images[:3000], Y:mnist.test.labels[:3000]})\n",
+    "        summary, test_acc = sess.run([merge_summary_op, accuracy_op], feed_dict={X:mnist.test.images[:3000], Y:mnist.test.labels[:3000]})\n",
     "        test_writer.add_summary(summary, step)\n",
-    "        if step%100 == 0:\n",
-    "            print(\"step: {}  accuracy:{:.2f}%\".format(step, acc*100))\n",
+    "        if step%20 == 0:\n",
+    "            print(\"step: {}  train_acc:{:.2f}%  test accuracy:{:.2f}%\".format(step, train_acc*100, test_acc*100))\n",
     "    print('Training Complete!')"
    ]
   },
